--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 
 body{
-    background-color: black;
+    background: linear-gradient(to right, rgba(128, 0, 255), rgb(255, 0, 255));
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 1080px;
+    z-index: -5;
 }
 
 @font-face {
@@ -13,9 +17,13 @@ body{
     src: url(summer-dance/SummerDance.ttf);
 }
 
+.audio{
+    text-align: center;
+}
+
 .love{
-    display: flex;
-    justify-content: center;
+    width: 100%;
+    height: 100%;
 }
 
 .caja{
@@ -23,6 +31,8 @@ body{
     grid-template-columns: repeat(auto-fill, minmax(12rem, 1fr));
     grid-template-rows: 20rem;
     width: 50%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .cajita{
@@ -36,8 +46,9 @@ body{
     border-radius: 20px;
     transition: 500ms;
     margin-top: 1cm;
-    opacity: 0.05;
+    opacity: 0.3;
     cursor: pointer;
+    border: 2px solid white;
 }
 
 .cajita:nth-child(1){
@@ -96,26 +107,26 @@ body{
 }
 
 .cajita:hover:nth-child(1){
-    box-shadow: 0px 0px 50px 0px rgb(255, 0, 255);
+    box-shadow: 0px 0px 70px 0px rgb(255, 0, 255);
     opacity: 1;
 }
 
 .cajita:hover:nth-child(2){
-    box-shadow: 0px 0px 50px 0px rgb(128, 0, 255);
+    box-shadow: 0px 0px 70px 0px rgb(128, 0, 255);
     opacity: 1;
 }
 
 .cajita:hover:nth-child(3){
-    box-shadow: 0px 0px 50px 0px rgb(255, 0, 255);
+    box-shadow: 0px 0px 70px 0px rgb(255, 0, 255);
     opacity: 1;
 }
 
 .cajita:hover:nth-child(4){
-    box-shadow: 0px 0px 50px 0px rgb(128, 0, 255);
+    box-shadow: 0px 0px 70px 0px rgb(128, 0, 255);
     opacity: 1;
 }
 
-@media screen and (max-width: 975px){
+@media screen and (max-width: 783px){
     .cajita:nth-child(2){
         margin-top: -1.2cm;
     }
@@ -135,5 +146,10 @@ body{
 
     .cajita p{
         font-size: 40px;
+    }
+}
+
+@media screen and (max-width: 310px) {
+    body{
     }
 }
