--- a/style.css
+++ b/style.css
@@ -26,6 +26,13 @@ body{
     height: 100%;
 }
 
+h1{
+    text-align: center;
+    font-family: SummerDance;
+    color: white;
+    font-size: 60px;
+}
+
 .caja{
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(12rem, 1fr));
